# py-crispr-analyser

./: .flake8  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: requirements.txt
docs/source/: conf.py  cross_reference.md  index.rst  install.md  intro.md  license_contact.md  modules.rst  py_crispr_analyser.rst  usage.md
py_crispr_analyser/: align.py  gather.py  index.py  search.py  utils.py
scripts/: index_database.py
tests/: bench_align.py  conftest.py  test_align.py  test_gather.py  test_index.py  test_search.py  test_utils.py
