# Copyright (C) 2025 Genome Research Ltd.

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "py-crispr-analyser"
description = "Analyse a genome for CRISPRs and off-targets"
version = "1.0.0"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
authors = [
  {name = "Bo Fussing", email = "bf15@sanger.ac.uk"},
]
requires-python = ">=3.12"
dependencies = [
  "numba>=0.61.2,<0.62",
  "numpy>=2.0,<2.3",
  "numba-cuda[cu12]; sys_platform == 'linux'",
]
optional-dependencies.dev = [
  "black>=25.1.0,<26",
  "flake8>=7.1.2,<8",
  "pytest>=8.3.5,<9",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
crispr_analyser_align = "py_crispr_analyser.align:run"
crispr_analyser_gather = "py_crispr_analyser.gather:run"
crispr_analyser_index = "py_crispr_analyser.index:run"
crispr_analyser_search = "py_crispr_analyser.search:run"

[project.urls]
Repository = "https://github.com/htgt/py-crispr-analyser"
Issues = "https://github.com/htgt/py-crispr-analyser/issues"

[tool.black]
line-length = 80
target-version = ["py312"]
