# Copyright (C) 2025 Genome Research Ltd.

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "py-crispr-analyser"
description = "Analyse a genome for CRISPRs and off-targets"
version = "1.0.1"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
authors = [
  {name = "Bo Fussing", email = "bf15@sanger.ac.uk"},
]
requires-python = ">=3.12"
dependencies = [
  "numba>=0.61.2,<0.62",
  "numpy>=2.0,<2.3",
  "numba-cuda[cu12]; sys_platform == 'linux'",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
  "black>=25.1.0,<26",
  "flake8>=7.1.2,<8",
  "pytest>=8.3.5,<9",
]
sphinx = [
  "myst-parser>=4.0.1,<5",
  "sphinx>=8.2.3,<9",
  "sphinx-rtd-theme>=3.0.2,<4",
  "sphinx-pyproject>=0.3.0,<0.4",
]

[project.scripts]
crispr_analyser_align = "py_crispr_analyser.align:run"
crispr_analyser_gather = "py_crispr_analyser.gather:run"
crispr_analyser_index = "py_crispr_analyser.index:run"
crispr_analyser_search = "py_crispr_analyser.search:run"

[project.urls]
Repository = "https://github.com/sanger-cellular-informatics/py-crispr-analyser"
Issues = "https://github.com/sanger-cellular-informatics/py-crispr-analyser/issues"

[tool.sphinx-pyproject]
copyright = "2025 Genome Research Ltd"
project = "py-crispr-analyser"

[tool.sphinx-pyproject.myst_substitutions]
tested_cuda_version = "12.4"
requires_python = ">=3.12"

[tool.black]
line-length = 80
target-version = ["py312"]
